WebKit Bugzilla
New
Browse
Search+
Log In
×
Sign in with GitHub
or
Remember my login
Create Account
·
Forgot Password
Forgotten password account recovery
RESOLVED FIXED
71719
Chromium: Fix bad rubber-band overhang shadows being drawn in the presence of custom scrollbar css.
https://bugs.webkit.org/show_bug.cgi?id=71719
Summary
Chromium: Fix bad rubber-band overhang shadows being drawn in the presence of...
asvitkine
Reported
2011-11-07 12:21:04 PST
Chromium: Fix bad rubber-band overhang shadows being drawn in the presence of custom scrollbar css.
Attachments
Patch
(185.50 KB, patch)
2011-11-07 12:26 PST
,
asvitkine
no flags
Details
Formatted Diff
Diff
Patch
(185.50 KB, patch)
2011-11-07 12:29 PST
,
asvitkine
no flags
Details
Formatted Diff
Diff
Patch
(185.50 KB, patch)
2011-11-09 07:56 PST
,
asvitkine
no flags
Details
Formatted Diff
Diff
Patch
(185.50 KB, patch)
2011-11-09 13:14 PST
,
asvitkine
no flags
Details
Formatted Diff
Diff
Patch
(185.50 KB, patch)
2011-11-09 13:17 PST
,
asvitkine
no flags
Details
Formatted Diff
Diff
Show Obsolete
(4)
View All
Add attachment
proposed patch, testcase, etc.
asvitkine
Comment 1
2011-11-07 12:26:01 PST
Created
attachment 113910
[details]
Patch
asvitkine
Comment 2
2011-11-07 12:29:32 PST
Created
attachment 113912
[details]
Patch
asvitkine
Comment 3
2011-11-08 06:39:34 PST
bdakin@, does this make sense to you?
Beth Dakin
Comment 4
2011-11-08 15:29:54 PST
I had to stare at it for a while, but yes, I think it makes sense.
WebKit Review Bot
Comment 5
2011-11-08 15:33:48 PST
Comment on
attachment 113912
[details]
Patch Rejecting
attachment 113912
[details]
from commit-queue. Failed to run "['/mnt/git/webkit-commit-queue/Tools/Scripts/webkit-patch', '--status-host=queues.webkit.org', '-..." exit_code: 2 Last 500 characters of output: crollbars-nw.html patching file LayoutTests/platform/chromium/rubberbanding/custom-scrollbars-se-expected.txt patching file LayoutTests/platform/chromium/rubberbanding/custom-scrollbars-se.html patching file LayoutTests/platform/chromium/rubberbanding/custom-scrollbars-sw-expected.txt patching file LayoutTests/platform/chromium/rubberbanding/custom-scrollbars-sw.html Failed to run "[u'/mnt/git/webkit-commit-queue/Tools/Scripts/svn-apply', u'--reviewer', u'Beth Dakin', u'--force']" exit_code: 1 Full output:
http://queues.webkit.org/results/10369219
asvitkine
Comment 6
2011-11-09 07:56:18 PST
Created
attachment 114279
[details]
Patch
asvitkine
Comment 7
2011-11-09 07:57:06 PST
Comment on
attachment 114279
[details]
Patch Note sure what went wrong with the CQ there. Here's the same patch against TOT, in case that makes a difference.
asvitkine
Comment 8
2011-11-09 12:30:41 PST
Could I get another review+/commit-queue+? (This patch is the same as the last one but against a newer WebKit revision.)
Nico Weber
Comment 9
2011-11-09 12:32:03 PST
Since you have an r+ already, you could replace the "Reviewed by nobody" with "Reviewed by Beth Dakin" (webkit-patch land-safely will do this automatically). Then I can cq+.
asvitkine
Comment 10
2011-11-09 13:14:56 PST
Created
attachment 114348
[details]
Patch
asvitkine
Comment 11
2011-11-09 13:17:38 PST
Created
attachment 114351
[details]
Patch
WebKit Review Bot
Comment 12
2011-11-09 14:29:45 PST
Comment on
attachment 114351
[details]
Patch Clearing flags on attachment: 114351 Committed
r99761
: <
http://trac.webkit.org/changeset/99761
>
WebKit Review Bot
Comment 13
2011-11-09 14:29:52 PST
All reviewed patches have been landed. Closing bug.
Note
You need to
log in
before you can comment on or make changes to this bug.
Top of Page
Format For Printing
XML
Clone This Bug