Chromium: Fix bad rubber-band overhang shadows being drawn in the presence of custom scrollbar css. https://bugs.webkit.org/show_bug.cgi?id=71719

Source/WebCore:

This was caused by the overhang calculation logic not being consistent when subtracting the scrollbar sizes from the overhang areas. This resulted in for e.g. a horizontal overhang that didn't overlap with the scrollbar while the vertical overhang overlapped with it. This fix makes the logic consistent so that the overhang areas do not overlap with the scrollbars (when scrollbars are opaque).

Patch by Alexei Svitkine <asvitkine@chromium.org> on 2011-11-09
Reviewed by Beth Dakin.

Tests: platform/chromium/rubberbanding/custom-scrollbars-ne.html
       platform/chromium/rubberbanding/custom-scrollbars-nw.html
       platform/chromium/rubberbanding/custom-scrollbars-se.html
       platform/chromium/rubberbanding/custom-scrollbars-sw.html

* platform/ScrollView.cpp:
(WebCore::ScrollView::wheelEvent):

LayoutTests:

Patch by Alexei Svitkine <asvitkine@chromium.org> on 2011-11-09
Reviewed by Beth Dakin.

* platform/chromium/rubberbanding/custom-scrollbars-ne-expected.png: Added.
* platform/chromium/rubberbanding/custom-scrollbars-ne-expected.txt: Added.
* platform/chromium/rubberbanding/custom-scrollbars-ne.html: Added.
* platform/chromium/rubberbanding/custom-scrollbars-nw-expected.png: Added.
* platform/chromium/rubberbanding/custom-scrollbars-nw-expected.txt: Added.
* platform/chromium/rubberbanding/custom-scrollbars-nw.html: Added.
* platform/chromium/rubberbanding/custom-scrollbars-se-expected.png: Added.
* platform/chromium/rubberbanding/custom-scrollbars-se-expected.txt: Added.
* platform/chromium/rubberbanding/custom-scrollbars-se.html: Added.
* platform/chromium/rubberbanding/custom-scrollbars-sw-expected.png: Added.
* platform/chromium/rubberbanding/custom-scrollbars-sw-expected.txt: Added.
* platform/chromium/rubberbanding/custom-scrollbars-sw.html: Added.

git-svn-id: svn://svn.chromium.org/blink/trunk@99761 bbb929c8-8fbe-4397-9dbb-9b2b20218538